# basement-geode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  about.md  build.sh  changelog.md  configure.sh  mod.json
.github/workflows/: build.yml
bindings/bindings/2.204/: Cocos2d.bro  GeometryDash.bro
bindings/scripts/: DumpVirtuals.java  SyncBromaScript.java
bindings/test/members/: CMakeLists.txt  Codegen.cmake
resources/dicts/: Robot_AnimDesc.plist  Spider_AnimDesc.plist  dragEffect.plist  objectDefinitions.plist
resources/loc/: en.json  ru.json
resources/spritesheets/: BasementOverrides-hd.plist  BasementOverrides-uhd.plist  BasementOverrides.plist
src/: AutoBackup.cpp  CreatorLayer.cpp  CreditsLayer.cpp  CreditsLayer.hpp  DiscordButton.cpp  DiscordButton.hpp  Instances.cpp  LevelSelectLayer.cpp  MenuLayer.cpp  ModBadge.cpp  ModBadge.hpp  OldAccountSystem.cpp  ResourcesLoading.cpp  RussianInput.cpp  backup.cpp  main.cpp  patches.cpp  patches.hpp  utils.cpp  utils.hpp
